AngularComponentParser.java
// Generated from AngularComponentParser.g4 by ANTLR 4.13.1
package src.antlr4;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class AngularComponentParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		IMPORT=1, Export=2, Class=3, Interface=4, Extends=5, Implements=6, Constructor=7, 
		Public=8, Private=9, Protected=10, This=11, True=12, False=13, Null=14, 
		From=15, Selector=16, TEMPLATE=17, Styles=18, AT=19, ANG_FOR=20, ANG_IF=21, 
		LeftBrace=22, RightBrace=23, LeftParen=24, RightParen=25, LeftBracket=26, 
		RightBracket=27, Dot=28, Comma=29, Colon=30, SemiColon=31, EQUALS=32, 
		Arrow=33, Bang=34, Question=35, Pipe=36, Plus=37, Minus=38, Multiply=39, 
		Divide=40, Modulo=41, Increment=42, SingleQuote=43, DoubleQuote=44, TAG_OPEN=45, 
		TAG_CLOSE=46, TAG_SLASH_CLOSE=47, HANDLEBAR_OPEN=48, HANDLEBAR_CLOSE=49, 
		TEMPLATE_STRING=50, STRING=51, NUMBER=52, ID=53, COMMENT=54, LINE_COMMENT=55, 
		WS=56, LINE_COMMENT_HTML=57, BLOCK_COMMENT_HTML=58, TAG_OPEN_START_HTML=59, 
		TAG_CLOSE_START_HTML=60, TAG_CLOSE_END_HTML=61, TAG_END_HTML=62, ATTRIBUTE_EQUALS_HTML=63, 
		STRING_HTML=64, STRUCTURAL_DIR_HTML=65, BINDING_HTML=66, EVENT_BINDING_HTML=67, 
		NEGATION_HTML=68, COLON_HTML=69, INTERPOLATION_START_HTML=70, INTERPOLATION_END_HTML=71, 
		DOT_HTML=72, NAME_HTML=73, WS_HTML=74, END_TEMPLATE=75, BACKTICK_HTML=76, 
		BACKTICK_CSS=77, COLON_CSS=78, COMMA_CSS=79, OPEN_LIST=80, CLOSE_LIST=81, 
		DOT_CSS=82, SEMICOLON_CSS=83, LBRACE_CSS=84, RBRACE_CSS=85, PERCENT=86, 
		WS_CSS=87, LINE_COMMENT_CSS=88, BLOCK_COMMENT_CSS=89, PX=90, EM=91, REM=92, 
		ID_CSS=93;
	public static final int
		RULE_program = 0, RULE_importStmt = 1, RULE_componentDecorator = 2, RULE_componentMetadata = 3, 
		RULE_metadataField = 4, RULE_interfaceDecl = 5, RULE_interfaceField = 6, 
		RULE_classDecl = 7, RULE_classMember = 8, RULE_fieldDecl = 9, RULE_constructorDecl = 10, 
		RULE_methodDecl = 11, RULE_parameterList = 12, RULE_parameter = 13, RULE_typeSpec = 14, 
		RULE_primaryType = 15, RULE_functionType = 16, RULE_literalType = 17, 
		RULE_expression = 18, RULE_primaryExpr = 19, RULE_arrayLiteralExpression = 20, 
		RULE_objectLiteralExpression = 21, RULE_objectLiteralPair = 22, RULE_argumentList = 23, 
		RULE_statement = 24, RULE_blockStatement = 25, RULE_expressionStatement = 26, 
		RULE_element = 27, RULE_tag = 28, RULE_openingTag = 29, RULE_closingTag = 30, 
		RULE_selfClosingTag = 31, RULE_attributes = 32, RULE_interpolation = 33, 
		RULE_cssBody = 34, RULE_cssObjects = 35, RULE_csselement = 36, RULE_bodyelement = 37, 
		RULE_cssValue = 38;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "importStmt", "componentDecorator", "componentMetadata", "metadataField", 
			"interfaceDecl", "interfaceField", "classDecl", "classMember", "fieldDecl", 
			"constructorDecl", "methodDecl", "parameterList", "parameter", "typeSpec", 
			"primaryType", "functionType", "literalType", "expression", "primaryExpr", 
			"arrayLiteralExpression", "objectLiteralExpression", "objectLiteralPair", 
			"argumentList", "statement", "blockStatement", "expressionStatement", 
			"element", "tag", "openingTag", "closingTag", "selfClosingTag", "attributes", 
			"interpolation", "cssBody", "cssObjects", "csselement", "bodyelement", 
			"cssValue"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'import'", "'export'", "'class'", "'interface'", "'extends'", 
			"'implements'", "'constructor'", "'public'", "'private'", "'protected'", 
			"'this'", "'true'", "'false'", "'null'", "'from'", "'selector'", "'template'", 
			"'styles'", "'@'", "'*ngFor'", "'*ngIf'", null, null, "'('", "')'", null, 
			null, null, null, null, null, null, "'=>'", null, "'?'", "'|'", "'+'", 
			"'-'", "'*'", "'/'", null, "'++'", null, "'\"'", "'<'", null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, "'</'", 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, "'`,'", null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, "'px'", "'em'", "'rem'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "IMPORT", "Export", "Class", "Interface", "Extends", "Implements", 
			"Constructor", "Public", "Private", "Protected", "This", "True", "False", 
			"Null", "From", "Selector", "TEMPLATE", "Styles", "AT", "ANG_FOR", "ANG_IF", 
			"LeftBrace", "RightBrace", "LeftParen", "RightParen", "LeftBracket", 
			"RightBracket", "Dot", "Comma", "Colon", "SemiColon", "EQUALS", "Arrow", 
			"Bang", "Question", "Pipe", "Plus", "Minus", "Multiply", "Divide", "Modulo", 
			"Increment", "SingleQuote", "DoubleQuote", "TAG_OPEN", "TAG_CLOSE", "TAG_SLASH_CLOSE", 
			"HANDLEBAR_OPEN", "HANDLEBAR_CLOSE", "TEMPLATE_STRING", "STRING", "NUMBER", 
			"ID", "COMMENT", "LINE_COMMENT", "WS", "LINE_COMMENT_HTML", "BLOCK_COMMENT_HTML", 
			"TAG_OPEN_START_HTML", "TAG_CLOSE_START_HTML", "TAG_CLOSE_END_HTML", 
			"TAG_END_HTML", "ATTRIBUTE_EQUALS_HTML", "STRING_HTML", "STRUCTURAL_DIR_HTML", 
			"BINDING_HTML", "EVENT_BINDING_HTML", "NEGATION_HTML", "COLON_HTML", 
			"INTERPOLATION_START_HTML", "INTERPOLATION_END_HTML", "DOT_HTML", "NAME_HTML", 
			"WS_HTML", "END_TEMPLATE", "BACKTICK_HTML", "BACKTICK_CSS", "COLON_CSS", 
			"COMMA_CSS", "OPEN_LIST", "CLOSE_LIST", "DOT_CSS", "SEMICOLON_CSS", "LBRACE_CSS", 
			"RBRACE_CSS", "PERCENT", "WS_CSS", "LINE_COMMENT_CSS", "BLOCK_COMMENT_CSS", 
			"PX", "EM", "REM", "ID_CSS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "AngularComponentParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AngularComponentParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(AngularComponentParser.EOF, 0); }
		public List<ImportStmtContext> importStmt() {
			return getRuleContexts(ImportStmtContext.class);
		}
		public ImportStmtContext importStmt(int i) {
			return getRuleContext(ImportStmtContext.class,i);
		}
		public InterfaceDeclContext interfaceDecl() {
			return getRuleContext(InterfaceDeclContext.class,0);
		}
		public ComponentDecoratorContext componentDecorator() {
			return getRuleContext(ComponentDecoratorContext.class,0);
		}
		public ClassDeclContext classDecl() {
			return getRuleContext(ClassDeclContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularComponentParserListener ) ((AngularComponentParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularComponentParserListener ) ((AngularComponentParserListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularComponentParserVisitor ) return ((AngularComponentParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IMPORT) {
				{
				{
				setState(78);
				importStmt();
				}
				}
				setState(83);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(85);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Interface) {
				{
				setState(84);
				interfaceDecl();
				}
			}

			setState(88);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==AT) {
				{
				setState(87);
				componentDecorator();
				}
			}

			setState(91);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Export || _la==Class) {
				{
				setState(90);
				classDecl();
				}
			}

			setState(93);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportStmtContext extends ParserRuleContext {
		public TerminalNode IMPORT() { return getToken(AngularComponentParser.IMPORT, 0); }
		public TerminalNode LeftBrace() { return getToken(AngularComponentParser.LeftBrace, 0); }
		public TerminalNode ID() { return getToken(AngularComponentParser.ID, 0); }
		public TerminalNode RightBrace() { return getToken(AngularComponentParser.RightBrace, 0); }
		public TerminalNode From() { return getToken(AngularComponentParser.From, 0); }
		public TerminalNode STRING() { return getToken(AngularComponentParser.STRING, 0); }
		public TerminalNode SemiColon() { return getToken(AngularComponentParser.SemiColon, 0); }
		public ImportStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importStmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularComponentParserListener ) ((AngularComponentParserListener)listener).enterImportStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularComponentParserListener ) ((AngularComponentParserListener)listener).exitImportStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularComponentParserVisitor ) return ((AngularComponentParserVisitor<? extends T>)visitor).visitImportStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportStmtContext importStmt() throws RecognitionException {
		ImportStmtContext _localctx = new ImportStmtContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_importStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			match(IMPORT);
			setState(96);
			match(LeftBrace);
			setState(97);
			match(ID);
			setState(98);
			match(RightBrace);
			setState(99);
			match(From);
			setState(100);
			match(STRING);
			setState(101);
			match(SemiColon);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ComponentDecoratorContext extends ParserRuleContext {
		public TerminalNode AT() { return getToken(AngularComponentParser.AT, 0); }
		public TerminalNode ID() { return getToken(AngularComponentParser.ID, 0); }
		public TerminalNode LeftParen() { return getToken(AngularComponentParser.LeftParen, 0); }
		public ComponentMetadataContext componentMetadata() {
			return getRuleContext(ComponentMetadataContext.class,0);
		}
		public TerminalNode RightParen() { return getToken(AngularComponentParser.RightParen, 0); }
		public ComponentDecoratorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_componentDecorator; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularComponentParserListener ) ((AngularComponentParserListener)listener).enterComponentDecorator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularComponentParserListener ) ((AngularComponentParserListener)listener).exitComponentDecorator(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularComponentParserVisitor ) return ((AngularComponentParserVisitor<? extends T>)visitor).visitComponentDecorator(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ComponentDecoratorContext componentDecorator() throws RecognitionException {
		ComponentDecoratorContext _localctx = new ComponentDecoratorContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_componentDecorator);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			match(AT);
			setState(104);
			match(ID);
			setState(105);
			match(LeftParen);
			setState(106);
			componentMetadata();
			setState(107);
			match(RightParen);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ComponentMetadataContext extends ParserRuleContext {
		public TerminalNode LeftBrace() { return getToken(AngularComponentParser.LeftBrace, 0); }
		public TerminalNode RightBrace() { return getToken(AngularComponentParser.RightBrace, 0); }
		public List<MetadataFieldContext> metadataField() {
			return getRuleContexts(MetadataFieldContext.class);
		}
		public MetadataFieldContext metadataField(int i) {
			return getRuleContext(MetadataFieldContext.class,i);
		}
		public List<TerminalNode> Comma() { return getTokens(AngularComponentParser.Comma); }
		public TerminalNode Comma(int i) {
			return getToken(AngularComponentParser.Comma, i);
		}
		public ComponentMetadataContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_componentMetadata; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularComponentParserListener ) ((AngularComponentParserListener)listener).enterComponentMetadata(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularComponentParserListener ) ((AngularComponentParserListener)listener).exitComponentMetadata(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularComponentParserVisitor ) return ((AngularComponentParserVisitor<? extends T>)visitor).visitComponentMetadata(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ComponentMetadataContext componentMetadata() throws RecognitionException {
		ComponentMetadataContext _localctx = new ComponentMetadataContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_componentMetadata);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			match(LeftBrace);
			setState(116);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 458752L) != 0)) {
				{
				{
				setState(110);
				metadataField();
				setState(112);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==Comma) {
					{
					setState(111);
					match(Comma);
					}
				}

				}
				}
				setState(118);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(119);
			match(RightBrace);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MetadataFieldContext extends ParserRuleContext {
		public MetadataFieldContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_metadataField; }
	 
		public MetadataFieldContext() { }
		public void copyFrom(MetadataFieldContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SelectorFieldContext extends MetadataFieldContext {
		public TerminalNode Selector() { return getToken(AngularComponentParser.Selector, 0); }
		public TerminalNode Colon() { return getToken(AngularComponentParser.Colon, 0); }
		public TerminalNode STRING() { return getToken(AngularComponentParser.STRING, 0); }
		public TerminalNode SemiColon() { return getToken(AngularComponentParser.SemiColon, 0); }
		public SelectorFieldContext(MetadataFieldContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularComponentParserListener ) ((AngularComponentParserListener)listener).enterSelectorField(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularComponentParserListener ) ((AngularComponentParserListener)listener).exitSelectorField(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularComponentParserVisitor ) return ((AngularComponentParserVisitor<? extends T>)visitor).visitSelectorField(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class StylesFieldContext extends MetadataFieldContext {
		public TerminalNode Styles() { return getToken(AngularComponentParser.Styles, 0); }
		public TerminalNode COLON_CSS() { return getToken(AngularComponentParser.COLON_CSS, 0); }
		public TerminalNode OPEN_LIST() { return getToken(AngularComponentParser.OPEN_LIST, 0); }
		public CssBodyContext cssBody() {
			return getRuleContext(CssBodyContext.class,0);
		}
		public TerminalNode CLOSE_LIST() { return getToken(AngularComponentParser.CLOSE_LIST, 0); }
		public TerminalNode Comma() { return getToken(AngularComponentParser.Comma, 0); }
		public StylesFieldContext(MetadataFieldContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularComponentParserListener ) ((AngularComponentParserListener)listener).enterStylesField(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularComponentParserListener ) ((AngularComponentParserListener)listener).exitStylesField(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularComponentParserVisitor ) return ((AngularComponentParserVisitor<? extends T>)visitor).visitStylesField(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class TemplateFieldContext extends MetadataFieldContext {
		public TerminalNode TEMPLATE() { return getToken(AngularComponentParser.TEMPLATE, 0); }
		public TerminalNode COLON_HTML() { return getToken(AngularComponentParser.COLON_HTML, 0); }
		public TerminalNode BACKTICK_HTML() { return getToken(AngularComponentParser.BACKTICK_HTML, 0); }
		public TerminalNode END_TEMPLATE() { return getToken(AngularComponentParser.END_TEMPLATE, 0); }
		public List<ElementContext> element() {
			return getRuleContexts(ElementContext.class);
		}
		public ElementContext element(int i) {
			return getRuleContext(ElementContext.class,i);
		}
		public TemplateFieldContext(MetadataFieldContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularComponentParserListener ) ((AngularComponentParserListener)listener).enterTemplateField(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularComponentParserListener ) ((AngularComponentParserListener)listener).exitTemplateField(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularComponentParserVisitor ) return ((AngularComponentParserVisitor<? extends T>)visitor).visitTemplateField(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MetadataFieldContext metadataField() throws RecognitionException {
		MetadataFieldContext _localctx = new MetadataFieldContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_metadataField);
		int _la;
		try {
			setState(145);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Selector:
				_localctx = new SelectorFieldContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(121);
				match(Selector);
				setState(122);
				match(Colon);
				setState(123);
				match(STRING);
				setState(125);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SemiColon) {
					{
					setState(124);
					match(SemiColon);
					}
				}

				}
				break;
			case TEMPLATE:
				_localctx = new TemplateFieldContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(127);
				match(TEMPLATE);
				setState(128);
				match(COLON_HTML);
				setState(129);
				match(BACKTICK_HTML);
				setState(133);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (((((_la - 59)) & ~0x3f) == 0 && ((1L << (_la - 59)) & 18433L) != 0)) {
					{
					{
					setState(130);
					element();
					}
					}
					setState(135);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(136);
				match(END_TEMPLATE);
				}
				break;
			case Styles:
				_localctx = new StylesFieldContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(137);
				match(Styles);
				setState(138);
				match(COLON_CSS);
				setState(139);
				match(OPEN_LIST);
				setState(140);
				cssBody();
				setState(141);
				match(CLOSE_LIST);
				setState(143);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
				case 1:
					{
					setState(142);
					match(Comma);
					}
					break;
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InterfaceDeclContext extends ParserRuleContext {
		public TerminalNode Interface() { return getToken(AngularComponentParser.Interface, 0); }
		public TerminalNode ID() { return getToken(AngularComponentParser.ID, 0); }
		public TerminalNode LeftBrace() { return getToken(AngularComponentParser.LeftBrace, 0); }
		public TerminalNode RightBrace() { return getToken(AngularComponentParser.RightBrace, 0); }
		public List<InterfaceFieldContext> interfaceField() {
			return getRuleContexts(InterfaceFieldContext.class);
		}
		public InterfaceFieldContext interfaceField(int i) {
			return getRuleContext(InterfaceFieldContext.class,i);
		}
		public InterfaceDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_interfaceDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularComponentParserListener ) ((AngularComponentParserListener)listener).enterInterfaceDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularComponentParserListener ) ((AngularComponentParserListener)listener).exitInterfaceDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularComponentParserVisitor ) return ((AngularComponentParserVisitor<? extends T>)visitor).visitInterfaceDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InterfaceDeclContext interfaceDecl() throws RecognitionException {
		InterfaceDeclContext _localctx = new InterfaceDeclContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_interfaceDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(147);
			match(Interface);
			setState(148);
			match(ID);
			setState(149);
			match(LeftBrace);
			setState(153);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ID) {
				{
				{
				setState(150);
				interfaceField();
				}
				}
				setState(155);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(156);
			match(RightBrace);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InterfaceFieldContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(AngularComponentParser.ID, 0); }
		public TerminalNode Colon() { return getToken(AngularComponentParser.Colon, 0); }
		public TypeSpecContext typeSpec() {
			return getRuleContext(TypeSpecContext.class,0);
		}
		public TerminalNode SemiColon() { return getToken(AngularComponentParser.SemiColon, 0); }
		public InterfaceFieldContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_interfaceField; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularComponentParserListener ) ((AngularComponentParserListener)listener).enterInterfaceField(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularComponentParserListener ) ((AngularComponentParserListener)listener).exitInterfaceField(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularComponentParserVisitor ) return ((AngularComponentParserVisitor<? extends T>)visitor).visitInterfaceField(this);
			else return visitor.visitChildren(this);
		}
	}
